# py2mcp

./: README.md  demo.tape  my_tools.py  pyproject.toml  test_tools.py
.github/workflows/: ci.yml
src/py2mcp/: __init__.py  cli.py  docstring_parser.py  parser.py  runner.py  schema.py  validator.py
tests/: test_parser.py  test_schema.py
