[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2mcp"
version = "0.1.0"
description = "Turn any Python file into an MCP server automatically via AST parsing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "mcp>=1.0.0"
]
authors = [
    { name = "Developer", email = "dev@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "build",
    "twine"
]

[project.scripts]
py2mcp = "py2mcp.cli:main"
